# sugar-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml  production.yaml
deploy/: deploy.sh  sugar-agent.service  update.sh
src/sugar_agent/: __init__.py  __main__.py  agent.py  config.py  main.py
src/sugar_agent/api/: __init__.py  admin.py  webhook.py  wecom.py
src/sugar_agent/db/: __init__.py  models.py
src/sugar_agent/health/: __init__.py  analyzer.py  models.py  parser.py
src/sugar_agent/llm/: __init__.py  client.py  context.py  tools.py
src/sugar_agent/memory/: __init__.py  memory_loader.py  store.py
src/sugar_agent/prompts/: system.md
src/sugar_agent/scheduler/: __init__.py  tasks.py
src/sugar_agent/weather/: __init__.py  service.py
src/sugar_agent/wechat/: __init__.py  base.py  http_bridge.py  mock_bridge.py  wecom_bridge.py  wecom_crypto.py
static/: index.html
static/css/: app.css
static/js/: api.js  app.js
tests/: conftest.py  test_health_parser.py
